# brief-6-qualite-eau-labdou

./: .gitignore  CHANGELOG.md  README.md  databricks.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml
api/: config.py  dependencies.py  main.py
api/db/: base.py  databricks_repo.py  duckdb_repo.py
api/models/: conformite.py  evolution.py  qualite.py
api/routes/: conformite.py  evolution.py  qualite.py
config/: pipeline.yml
notebooks/: 00_exploration_local.py  01_ingestion.py  02_bronze.py  03_silver.py  04_gold.py  05_validation_ge.py
tests/: conftest.py  test_gold_agregations.py  test_silver_conformite.py
