[project]
name = "brief-6-qualite-eau-labdou"
version = "0.1.0"
description = "Pipeline de qualité de l'eau avec Databricks DLT"
requires-python = ">=3.11"

dependencies = [
    "pyspark>=3.5",
    "delta-spark>=3.2",
    "databricks-sdk>=0.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
