[project]
name = "brief-6-qualite-eau-labdou"
version = "0.1.0"
description = "Pipeline de qualité de l'eau avec Databricks DLT"
requires-python = ">=3.11"

dependencies = [
    "dlt[databricks]>=1.4",
    "pyspark>=3.5",
    "delta-spark>=3.2",
    "databricks-sdk>=0.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "python-semantic-release>=9.0",
    "duckdb>=0.10",
    "pandas>=2.0",
    "requests>=2.31",
]
explore = [
    "duckdb>=0.10",
    "pandas>=2.0",
    "jupyter>=1.0"
]
api = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: tests nécessitant un appel API Hub'Eau (exclure avec -m 'not slow')"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = false
upload_to_pypi = false
upload_to_vcs_release = true
commit_parser = "angular"
